2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Cleaned up comments and code.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Removed stale files.

2008-05-22  Tomas Frydrych  <tf@o-hand.com>

	Simplified compositor by subclassing MBWM2's Clutter compositor.

2008-05-14  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-window.c:
	* src/hd-switcher.c:
	Sync up with upstream changes in clutter API.
